HW8 LAST FIX. 7:10pm 3/1/16
I don’t know what is happening here. The live preview shows everything
perfectly, but the github HW link shows too much bottom padding. I am
going to leave the padding out, and figure this out later. The HW is
done anyway.

--- a/hw8/css/winery.css
+++ b/hw8/css/winery.css
@@ -39,7 +39,7 @@ header {
 
 .uva-text {
     align-content: center;
-    margin-bottom: 200px;
+    
 }
 
 .uva-h1 {
